replacing body copy placeholders with our information

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a digital marketing professional and developer in training!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>That's a tough question as I moved around a lot, but originally Winston-Salem, NC</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I play a bunch of instruments: violin, bass guitar, guitar, and synthesizer.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'd like to develop software that helps to make the world a better place</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Decatur, GA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I've been working in digital marketing handling the content on our websites, but would like to work in a more technical and creative environment.</p>
     </section>
 
     <footer id="footer">
